// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`leaves unrelated assert statements untouched 1`] = `"false == true"`;

exports[`prints a nice error for an "expect"-labeled expression statement 1`] = `
"(1 === 2) is not truthy   # test.js:1
  
  assert(1 === 2, \\"(1 === 2) is not truthy\\")
           |                                
           false                            
  
  [number] 2
  => 2
  [number] 1
  => 1
  "
`;

exports[`still works if babel-plugin-espower is used for other assertions in the file 1`] = `
"(x > 0) is not truthy   # test.js:2
  
  assert(x > 0, \\"(x > 0) is not truthy\\")
         | |                            
         0 false                        
  "
`;

exports[`still works if babel-plugin-espower is used for other assertions in the file 2`] = `
"  # test.js:1
  
  assert(x >= 0)
         | |    
         | false
         -1     
  "
`;

exports[`supports non-standard JSX syntax 1`] = `
"(<div></div>.prop === 'expected') is not truthy   # test.js:1
  
  assert(<div></div>.prop === 'expected', \\"(<div></div>.prop === 'expected') is not truthy\\")
                     |    |                                                                 
                     |    false                                                             
                     \\"div\\"                                                                  
  
  --- [string] 'expected'
  +++ [string] <div></div>.prop
  @@ -1,8 +1,3 @@
  -expected
  +div
  
  "
`;

exports[`works when using autoImport 1`] = `
"(1 === 2) is not truthy   # test.js:1
  
  _assert(1 === 2, \\"(1 === 2) is not truthy\\")
            |                                
            false                            
  
  [number] 2
  => 2
  [number] 1
  => 1
  "
`;
